--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <a href="#">Try it free</a>
       </div>
       <div class="header-main">
-      <div class="header-body">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p class="header-text">
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
+        <div class="header-body">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p class="header-text">
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
 
-        <a href="">Get Started For Free</a>
-      </div>
-      <div class="header-img">
-        <img src="images/illustration-mockups.svg" alt="" />
-      </div>
+          <a href="">Get Started For Free</a>
+        </div>
+        <div class="header-img">
+          <img src="images/illustration-mockups.svg" alt="" />
+        </div>
       </div>
     </header>
     <main>
@@ -43,13 +43,13 @@
             class="card-img"
           />
           <div>
-          <h2>Grow Together</h2>
+            <h2>Grow Together</h2>
 
-          <p>
-            Generate meaningful discussions with your audience and build a
-            strong, loyal community. Think of the insightful conversations you
-            miss out on with a feedback form.
-          </p>
+            <p>
+              Generate meaningful discussions with your audience and build a
+              strong, loyal community. Think of the insightful conversations you
+              miss out on with a feedback form.
+            </p>
           </div>
         </div>
       </section>
@@ -61,13 +61,13 @@
             class="card-img"
           />
           <div>
-          <h2>Flowing Conversations</h2>
+            <h2>Flowing Conversations</h2>
 
-          <p>
-            You wouldn't paginate a conversation in real life, so why do it
-            online? Our threads have just-in-time loading for a more natural
-            flow.
-          </p>
+            <p>
+              You wouldn't paginate a conversation in real life, so why do it
+              online? Our threads have just-in-time loading for a more natural
+              flow.
+            </p>
           </div>
         </div>
       </section>
@@ -79,13 +79,13 @@
             class="card-img"
           />
           <div>
-          <h2>Your Users</h2>
+            <h2>Your Users</h2>
 
-          <p>
-            It takes no time at all to integrate Huddle with your app's
-            authentication solution. This means, once signed in to your app,
-            your users can start chatting immediately.
-          </p>
+            <p>
+              It takes no time at all to integrate Huddle with your app's
+              authentication solution. This means, once signed in to your app,
+              your users can start chatting immediately.
+            </p>
           </div>
         </div>
       </section>
@@ -150,6 +150,8 @@
           <a href="#">Blog</a>
           <a href="#">Contact Us</a>
         </div>
+      </section>
+      <section>
         <div>
           <div class="social">
             <a href="#" class="fa fa-facebook social-icon"></a>
