--- a/index.html
+++ b/index.html
@@ -143,12 +143,16 @@
       </section>
       <section>
         <div class="footer-link">
-          <a href="#">About Us</a>
-          <a href="#">What We Do</a>
-          <a href="#">FAQ</a>
-          <a href="#">Career</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact Us</a>
+          <div>
+            <a href="#">About Us</a>
+            <a href="#">What We Do</a>
+            <a href="#">FAQ</a>
+          </div>
+          <div>
+            <a href="#">Career</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact Us</a>
+          </div>
         </div>
       </section>
       <section>
